# soter_market

./: .dockerignore  .env-non-dev  .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: .env-example
src/app/: exceptions.py  logger.py  main.py
src/app/api/routers/: articles.py
src/app/articles/: dao.py  deleted_dao.py  models.py  router.py  schemas.py
src/app/categories/: dao.py  models.py  router.py  schemas.py
src/app/core/: config.py  database.py
src/app/migrations/: env.py
src/app/migrations/versions/: 40a647a3e4dc_initial_migration.py  86279036c184_initial_migration.py  897c71cec807_initial_migration.py  b2bd4fe8711c_initial_migration.py
src/app/models/: articles.py  categories.py  users.py
src/app/repo/: base.py  dao.py
src/app/schemas/: articles.py
src/app/services/: s3_client.py
src/app/tasks/: celery_app.py  email_templates.py  tasks.py
src/app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py  users.py
src/tests/: conftest.py  mock_articles.json  mock_categories.json  mock_deleted_articles.json  mock_users.json
src/tests/integration_tests/test_articles/: test_api.py
src/tests/integration_tests/test_users/: test_api.py
src/tests/unit_tests/test_categories/: test_dao.py
src/tests/unit_tests/test_users/: test_dao.py
