[project]
name = "soter-market"
version = "0.1.0"
description = "Soter Market"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.4.0",
    "python-json-logger>=3.3.0",
    "sqlalchemy>=2.0.41",
]
